WebAudio Node JS wrappers should not be collected if events can be fired https://bugs.webkit.org/show_bug.cgi?id=197533

Reviewed by Jer Noble.

Source/WebCore:

Before the patch, some web audio nodes could fire event listeners, but were not protected from GC.
Use CustomIsReachable to ensure theses nodes can be collected if:
- their AudioContext is stopped (typically due to document being navigated away).
- their AudioContext is closed.
- nodes do not have event listeners.

Covered by WPT mediacapture-streams/MediaStreamTrack-MediaElement-disabled-audio-is-silence.https.html and
WPT webaudio/the-audio-api/the-mediaelementaudiosourcenode-interface/mediaElementAudioSourceToScriptProcessorTest.html
and web audio WebRTC tests.
Specific newly added test: webaudio/webaudio-gc.html

* Modules/webaudio/AudioContext.h:
(WebCore::AudioContext::isClosed const):
* Modules/webaudio/AudioNode.idl:
* Sources.txt:
* WebCore.xcodeproj/project.pbxproj:
* bindings/js/JSAudioNodeCustom.cpp: Added.
(WebCore::JSAudioNodeOwner::isReachableFromOpaqueRoots):

LayoutTests:

* webaudio/webaudio-gc-expected.txt: Added.
* webaudio/webaudio-gc.html: Added.


Canonical link: https://commits.webkit.org/211762@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@244977 268f45cc-cd09-0410-ab3c-d52691b4dbfc